[tool.poetry]
name = "easybot"
version = "1.0.0"
description = ""
authors = ["Valentin Safronov <svdouble@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
rich = "^13.1.0"
gunicorn = "^22.0.0"
sismic = "^1.6.3"
python-telegram-bot = { version = "^21.1", extras = ["rate-limiter", "webhooks", "job-queue", "http2"] }
redis = "^5.0.0"
SQLAlchemy = { version = "^2.0.9", extras = ["asyncio"] }
psycopg = "^3.1.6"
httpx = { extras = ["http2"], version = "^0.27.0" }
authlib = "^1.2.0"
jinja2 = "^3.1.2"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
black = { extras = ["d"], version = "^24.4.0" }
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
